tests/baselines/reference/partialType2.errors.txt
tests/cases/compiler/partialType2.ts(10,5): error TS2322: Type 'partial T' is not assignable to type 'T'.
tests/cases/compiler/partialType2.ts(16,5): error TS2322: Type '{ name: string; length: number; foo: number; }' is not assignable to type 'partial T'.
tests/cases/compiler/partialType2.ts(18,11): error TS2339: Property 'name' does not exist on type 'partial T'.


==== tests/cases/compiler/partialType2.ts (3 errors) ====
    interface State {
        name: string;
        length: number;
        foo?: number;
    }
    
    function doSomething1<T>(x: T) {
        let y: partial T = <any>null;
        y = x; // Should be OK
        x = y; // Error
        ~
!!! error TS2322: Type 'partial T' is not assignable to type 'T'.
    }
    
    function doSomething2<T extends State>(x: T) {
        let y: partial T = <any>null;
        // Should error
        y = { name: '', length: 10, foo: 3};
        ~
!!! error TS2322: Type '{ name: string; length: number; foo: number; }' is not assignable to type 'partial T'.
        y = x; // OK
        if (y.name) {
              ~~~~
!!! error TS2339: Property 'name' does not exist on type 'partial T'.
    
        }
    }
     let ss: partial State;
     if (ss.foo) {
              
     }
    